[gd_scene load_steps=17 format=3 uid="uid://ce540ti72nek6"]

[ext_resource type="Texture2D" uid="uid://n67o3bwglach" path="res://assets/fundo_page8.png" id="1_j1xs8"]
[ext_resource type="FontFile" uid="uid://07fkf7jv26k0" path="res://assets/fonts/InriaSans-Regular.ttf" id="2_j1xs8"]
[ext_resource type="StyleBox" uid="uid://di2jcii5db1dn" path="res://assets/buttons/next_button.tres" id="3_5t6h0"]
[ext_resource type="Script" uid="uid://rqyx0mwref0r" path="res://next_button8.gd" id="4_c8dd4"]
[ext_resource type="StyleBox" uid="uid://de3mti8838fxf" path="res://assets/buttons/sound_button.tres" id="5_dra3b"]
[ext_resource type="Script" uid="uid://dajfltdqvddyw" path="res://cenas/mute_button_page2.gd" id="6_pm3fx"]
[ext_resource type="StyleBox" uid="uid://2wem8hydwdrr" path="res://assets/buttons/back_button.tres" id="7_3swlr"]
[ext_resource type="AudioStream" uid="uid://be8g2dqw0heod" path="res://assets/audios/audio_page8.wav" id="7_5t6h0"]
[ext_resource type="Script" uid="uid://vgm1lk73s8jo" path="res://back_button8.gd" id="9_3swlr"]
[ext_resource type="Texture2D" uid="uid://dq22vl22pynq2" path="res://assets/images/bolinha.png" id="10_pm3fx"]
[ext_resource type="Script" uid="uid://bg5014d4m3rpk" path="res://bolinha.gd" id="11_3swlr"]
[ext_resource type="Texture2D" uid="uid://dkmxg5gyeg1ms" path="res://assets/images/impressora.png" id="12_c8nv1"]
[ext_resource type="Texture2D" uid="uid://ctwhgwff4wit1" path="res://assets/images/carrinho.png" id="13_0jeqb"]
[ext_resource type="PackedScene" uid="uid://da2nsupc1xorh" path="res://cenas/particulas.tscn" id="14_3swlr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ajb18"]
radius = 63.07139

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l3sb"]
size = Vector2(98, 126)

[node name="page8" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 765.0
offset_bottom = 1024.0
texture = ExtResource("1_j1xs8")
expand_mode = 1

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 25.0
offset_top = 46.0
offset_right = 754.0
offset_bottom = 311.0
color = Color(0.19607843, 0.101960786, 0.9098039, 1)

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 633.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("2_j1xs8")
theme_override_font_sizes/font_size = 20
text = "Com o avanço rápido das tecnologias e as mudanças na forma como trabalhamos, 
muitas profissões novas têm surgido nos últimos anos. Essas profissões emergentes 
aparecem para resolver problemas modernos, aproveitar novas ferramentas e 
acompanhar as transformações do mundo. Hoje, áreas como inteligência artificial, 
programação, produção de conteúdo digital, análise de dados e meio ambiente estão 
criando oportunidades inéditas. Além disso, surgem trabalhos ligados à 
sustentabilidade, energias renováveis e proteção do planeta. Essas novas carreiras 
mostram que o mundo do trabalho está sempre mudando e que aprender 
continuamente é essencial para acompanhar essas transformações."

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 241.0
offset_top = 7.0
offset_right = 506.0
offset_bottom = 41.0
color = Color(0.19607843, 0.101960786, 0.9098039, 1)

[node name="Label" type="Label" parent="ColorRect3"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 190.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_j1xs8")
theme_override_font_sizes/font_size = 22
text = "PROFISSÕES EMERGENTES"

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 112.0
offset_top = 804.0
offset_right = 684.0
offset_bottom = 884.0
color = Color(0.19607843, 0.101960786, 0.9098039, 1)

[node name="Label" type="Label" parent="ColorRect4"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 240.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("2_j1xs8")
theme_override_font_sizes/font_size = 16
text = "A impressora 3D é uma das ferramentas que está possibilitando novos horizontes 
no mercado de trabalho. Arraste a bola de matéria prima vermelha para a 
impressora para ver a matéria prima se transformar. "

[node name="NextButton" type="Button" parent="."]
offset_left = 529.0
offset_top = 929.0
offset_right = 752.18005
offset_bottom = 1008.99
theme_override_styles/normal = ExtResource("3_5t6h0")
theme_override_styles/normal_mirrored = ExtResource("3_5t6h0")
theme_override_styles/pressed = ExtResource("3_5t6h0")
theme_override_styles/pressed_mirrored = ExtResource("3_5t6h0")
theme_override_styles/hover = ExtResource("3_5t6h0")
theme_override_styles/hover_mirrored = ExtResource("3_5t6h0")
theme_override_styles/hover_pressed = ExtResource("3_5t6h0")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_5t6h0")
theme_override_styles/disabled = ExtResource("3_5t6h0")
theme_override_styles/disabled_mirrored = ExtResource("3_5t6h0")
theme_override_styles/focus = ExtResource("3_5t6h0")
script = ExtResource("4_c8dd4")

[node name="SoundButton" type="Button" parent="."]
offset_left = 315.0
offset_top = 879.0
offset_right = 482.88
offset_bottom = 1046.88
theme_override_styles/normal = ExtResource("5_dra3b")
theme_override_styles/normal_mirrored = ExtResource("5_dra3b")
theme_override_styles/pressed = ExtResource("5_dra3b")
theme_override_styles/pressed_mirrored = ExtResource("5_dra3b")
theme_override_styles/hover = ExtResource("5_dra3b")
theme_override_styles/hover_mirrored = ExtResource("5_dra3b")
theme_override_styles/hover_pressed = ExtResource("5_dra3b")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_dra3b")
theme_override_styles/disabled = ExtResource("5_dra3b")
theme_override_styles/disabled_mirrored = ExtResource("5_dra3b")
theme_override_styles/focus = ExtResource("5_dra3b")
script = ExtResource("6_pm3fx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SoundButton"]
position = Vector2(-315, -879)
stream = ExtResource("7_5t6h0")

[node name="BackButton" type="Button" parent="."]
offset_left = 33.0
offset_top = 910.0
offset_right = 258.0
offset_bottom = 1002.0
theme_override_styles/normal = ExtResource("7_3swlr")
theme_override_styles/normal_mirrored = ExtResource("7_3swlr")
theme_override_styles/pressed = ExtResource("7_3swlr")
theme_override_styles/pressed_mirrored = ExtResource("7_3swlr")
theme_override_styles/hover = ExtResource("7_3swlr")
theme_override_styles/hover_mirrored = ExtResource("7_3swlr")
theme_override_styles/hover_pressed = ExtResource("7_3swlr")
theme_override_styles/hover_pressed_mirrored = ExtResource("7_3swlr")
theme_override_styles/disabled = ExtResource("7_3swlr")
theme_override_styles/disabled_mirrored = ExtResource("7_3swlr")
theme_override_styles/focus = ExtResource("7_3swlr")
script = ExtResource("9_3swlr")

[node name="Bolinha" type="TextureRect" parent="."]
offset_left = 479.0
offset_top = 597.0
offset_right = 756.1626
offset_bottom = 748.0
texture = ExtResource("10_pm3fx")
expand_mode = 1
script = ExtResource("11_3swlr")

[node name="Area2D" type="Area2D" parent="Bolinha"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bolinha/Area2D"]
position = Vector2(138, 77)
shape = SubResource("CircleShape2D_ajb18")

[node name="Impressora" type="TextureRect" parent="."]
offset_left = 236.0
offset_top = 562.0
offset_right = 603.1028
offset_bottom = 762.0
texture = ExtResource("12_c8nv1")
expand_mode = 1

[node name="ImpressoraArea" type="Area2D" parent="Impressora"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Impressora/ImpressoraArea"]
position = Vector2(145, 121)
shape = SubResource("RectangleShape2D_3l3sb")

[node name="Carrinho" type="TextureRect" parent="."]
visible = false
offset_left = 13.0
offset_top = 565.0
offset_right = 380.10278
offset_bottom = 765.0
texture = ExtResource("13_0jeqb")
expand_mode = 1

[node name="Particulas" parent="." instance=ExtResource("14_3swlr")]
position = Vector2(198, 665)
rotation = 1.0471976

[connection signal="pressed" from="NextButton" to="NextButton" method="_on_pressed"]
[connection signal="pressed" from="SoundButton" to="SoundButton" method="_on_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_pressed"]
[connection signal="area_entered" from="Bolinha/Area2D" to="Bolinha" method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Bolinha/Area2D" to="Bolinha" method="_on_area_2d_input_event"]
